--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="wte_logo.png" alt="Hello World from WTE"
+style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
+<p>A new line in our file!</p>
 
 </body>
 </html>
